# flappy_bird_ai

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.just/: _index.just  dependencies.just  git.just  manage.just  script.just
configs/: neat_feedforward.txt
output/: neat-checkpoint-4  neat-checkpoint-9
src/ai/: _dto.py  ai.py
src/game/: _base.py  _bird.py  _bird_element.py  _coordinator.py  _dto.py  _game_data.py  _ground_element.py  _i_element.py  _pipe.py  _pipe_element.py  _utils.py  _window.py  dto.py  game.py
src/shared_kernel/: logger.py  path.py
